# notion-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  config.toml  pyproject.toml
requirements/: dev-requirements.txt  requirements.txt
src/notionapi/: __init__.py  app.py  config.py  new_release.py  sentric_github.py  sentric_notion.py
