[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "notionapi"
version = "0.0.1"
authors = [
  { name="Matteo Beatrice", email="matteo.beatrice@sentric.it" },
]
description = "Python package used to automate operations with Notion"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/sentricsrl/notion-api"
"Bug Tracker" = "https://github.com/sentricsrl/notion-api/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
